--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MartinEbongue | Personal Intelligent Assitant</title>
+    <title>Future Martin | Personal Intelligent Assitant</title>
 
     <meta
       name="title"
-      content="MartinEbongue | Personal Intelligent Assitant" />
+      content="Future Martin | Personal Intelligent Assitant" />
     <meta
       name="description"
-      content="MartinEbongue | Personal Intelligent Assitant" />
+      content="Future Martin | Personal Intelligent Assitant" />
 
     <!-- Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://useanything.com" />
     <meta
       property="og:title"
-      content="MartinEbongue | Personal Intelligent Assitant" />
+      content="Future Martin | Personal Intelligent Assitant" />
     <meta
       property="og:description"
-      content="MartinEbongue | Personal Intelligent Assitant" />
+      content="Future Martin | Personal Intelligent Assitant" />
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/Mintplex-Labs/anything-llm/master/images/promo.png" />
@@ -31,10 +31,10 @@
     <meta property="twitter:url" content="https://useanything.com" />
     <meta
       property="twitter:title"
-      content="MartinEbongue | Personal Intelligent Assitant" />
+      content="Future Martin | Personal Intelligent Assitant" />
     <meta
       property="twitter:description"
-      content="MartinEbongue | Personal Intelligent Assitant" />
+      content="Future Martin | Personal Intelligent Assitant" />
     <meta
       property="twitter:image"
       content="https://raw.githubusercontent.com/Mintplex-Labs/anything-llm/master/images/promo.png" />
